классы для скриптов

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -22,28 +22,43 @@
             <div class="main-header__container">
                 <div class="main-header__top">
                     <div class="main-logo">
-                        <a href="#" class="main-logo__link">
-                            <img src="https://codezeel.com/opencart/OPC02/OPC020044/image/catalog/logo.png" alt="">
+                        <a href="#"
+                        class="main-logo__link">
+                            <img src="https://codezeel.com/opencart/OPC02/OPC020044/image/catalog/logo.png" 
+                            alt="">
                         </a>
                     </div>
                 </div>
                 <div class="main-header__bottom">
-                    <button class="main-nav__btn">menu</button>
-                    <nav class="main-nav">
+                    <button class="main-nav__btn js-main-nav__btn">menu</button>
+                    <nav class="main-nav js-main-nav">
                         <ul class="main-nav__list">
                             <li class="main-nav__item">
-                                <a href="#" class="main-nav__link main-nav__link--active">Home</a>
+                                <a href="#" 
+                                class="main-nav__link main-nav__link--active">Home</a>
                             </li>
                             <li class="main-nav__item">
-                                <a href="./plants.html" class="main-nav__link main-nav__accordion-btn main-nav-collapse" id="level-1">Plants</a>
+                                <a href="./plants.html" 
+                                class="main-nav__link main-nav__accordion-btn main-nav-collapse" 
+                                id="level-1">Plants</a>
                                 <ul class="main-nav-submenu main-nav-submenu--big">
                                     <li class="main-nav-submenu__item">
-                                        <a href="#" class="main-nav-submenu__link main-nav__accordion-btn" id="level-2">Tables</a>
+                                        <a href="#" 
+                                        class="main-nav-submenu__link main-nav__accordion-btn" 
+                                        id="level-2">Tables</a>
                                         <ul class="submenu__list">
-                                            <li class="submenu__item"><a href="#" class="submenu__link">Stools</a></li>
-                                            <li class="submenu__item"><a href="#" class="submenu__link">Study Table</a></li>
-                                            <li class="submenu__item"><a href="#" class="submenu__link">Coffe Table</a></li>
-                                            <li class="submenu__item"><a href="#" class="submenu__link">Writing Desk</a></li>
+                                            <li class="submenu__item">
+                                                <a href="#" 
+                                                class="submenu__link">Stools</a>
+                                            </li>
+                                            <li class="submenu__item">
+                                                <a href="#" class="submenu__link">Study Table</a></li>
+                                            <li class="submenu__item">
+                                                <a href="#" class="submenu__link">Coffe Table</a>
+                                            </li>
+                                            <li class="submenu__item">
+                                                <a href="#" class="submenu__link">Writing Desk</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="main-nav-submenu__item">
@@ -92,8 +107,8 @@
                     </nav>
                     <div class="main-header__wrapper">
                         <div class="main-header__search">
-                            <button class="search__btn">Search</button>
-                            <div class="search-container">
+                            <button class="search__btn js-search__btn">Search</button>
+                            <div class="search-container js-search-container">
                                 <form action="#" class="search-form">
                                     <input type="text" class="search-form__input" placeholder="Search Producs Here">
                                     <button class="search-form__btn" type="submit">Search</button>
@@ -105,8 +120,8 @@
                             <span class="cart__counter">0</span>
                         </div>
                         <div class="main-header__account">
-                            <button class="account__btn">Развернуть</button>
-                            <div class="account-container">
+                            <button class="account__btn js-account__btn">Развернуть</button>
+                            <div class="account-container js-account-container">
                                 <div class="account__menu">
                                     <ul class="account-menu__list">
                                         <li class="account-menu__item"><a href="#" class="account-menu__link">Register</a></li>
@@ -141,7 +156,7 @@
             <div class="promo-slider__container">
                 <button class="promo-slider__btn promo-slider__btn--prev"></button>
                 <button class="promo-slider__btn promo-slider__btn--next"></button>
-                <ul class="promo-slider__list">
+                <ul class="promo-slider__list js-promo-slider__list">
                     <li class="promo-slider__item">
                         <a href="#" class="promo-slider__link">
                         <img src="./img/main-banner-2-1903x822.jpg" alt="Main-banner-1" >
@@ -429,7 +444,7 @@
                 <div class="wrapper">
                     <div class="featured-products-container">
                         <div class="featured-products__title italic-title">Featured Products</div>
-                        <div class="featured-products-carousel">
+                        <div class="featured-products-carousel js-featured-products-carousel">
                             <ul class="featured-products-carousel__list">
                                 <li class="featured-products-carousel__item featured-product-card">
                                     <a href="#" class="featured-product-card__link">
@@ -741,7 +756,7 @@
             <div class="special-container">
                 <h2 class="special__title italic-title">Deal Of The Day</h2>
                 <div class="special-slider">
-                    <ul class="special-slider__list">
+                    <ul class="special-slider__list js-special-slider__list">
                         <li class="special-slider__item">
                             <div class="special-slider__item-wrapper">
                                 <div class="image-block">
@@ -925,7 +940,7 @@
                     <button class="close-popup__btn"></button>
                 </div>
                 <h4 class="news-block__title italic-title">Latest News</h4>
-                <ul class="news-block__slider-list">
+                <ul class="news-block__slider-list js-news-block__slider-list">
                     <li class="news-block__slider-item">
                         <div class="news-article">
                             <div class="bg-fade">
@@ -1041,7 +1056,7 @@
         </section>
         <section class="partners-section">
             <div class="partners">
-                <ul class="partners__list">
+                <ul class="partners__list  js-partners__list">
                     <li class="partners__item">
                         <div class="partners-block"><img src="./img/shopname.png" alt="" class="partners__img"></div>
                     </li>
@@ -1076,7 +1091,7 @@
         </section>
         <section class="testimonials-section">
             <div class="testimonials-block">
-                <ul class="testimonials__list">
+                <ul class="testimonials__list js-testimonials__list">
                     <li class="testimonials__item">
                         <div class="testimonial">
                             <div class="testimonial__photo">
@@ -1132,7 +1147,7 @@
                 <div class="main-footer-top">
                     <div class="main-footer__block contacts">
                         <div class="main-footer__block-title" id="contact">Contact</div>
-                        <ul class="contacts__list">
+                        <ul class="contacts__list js-contacts__list">
                             <li class="contacts__item">Cactuplan - Plant Store & United States</li>
                             <li class="contacts__item">000-000-0000</li>
                             <li class="contacts__item">123456</li>
@@ -1141,7 +1156,7 @@
                     </div>
                     <div class="main-footer__block footer-info">
                         <div class="main-footer__block-title" id="info">Information</div>
-                        <ul class="footer-info__list">
+                        <ul class="footer-info__list js-footer-info__list">
                             <li class="footer-info__item"><a href="#" class="footer-info__link">About Us</a></li>
                             <li class="footer-info__item"><a href="#" class="footer-info__link">Delivery Information</a></li>
                             <li class="footer-info__item"><a href="#" class="footer-info__link">Privacy Policy</a></li>
@@ -1184,7 +1199,7 @@
                 </div>
             </div>
         </footer>
-        <a href="#" class="scroll-top"></a>
+        <a href="#" class="scroll-top js-scroll-top"></a>
     </div>
     <script src="./js/hidden-blocks.js"></script>
     <script src="./js/accordion.js"></script>
