--- a/app/plants.html
+++ b/app/plants.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -27,8 +27,8 @@
                     </div>
                 </div>
                 <div class="main-header__bottom">
-                    <button class="main-nav__btn">menu</button>
-                    <nav class="main-nav">
+                    <button class="main-nav__btn js-main-nav__btn">menu</button>
+                    <nav class="main-nav js-main-nav">
                         <ul class="main-nav__list">
                             <li class="main-nav__item">
                                 <a href="./index.html" class="main-nav__link">Home</a>
@@ -91,8 +91,8 @@
                     </nav>
                     <div class="main-header__wrapper">
                         <div class="main-header__search">
-                            <button class="search__btn">Search</button>
-                            <div class="search-container">
+                            <button class="search__btn js-search__btn">Search</button>
+                            <div class="search-container js-search-container">
                                 <form action="#" class="search-form">
                                     <input type="text" class="search-form__input" placeholder="Search Producs Here">
                                     <button class="search-form__btn" type="submit">Search</button>
@@ -104,8 +104,8 @@
                             <span class="cart__counter">0</span>
                         </div>
                         <div class="main-header__account">
-                            <button class="account__btn">Развернуть</button>
-                            <div class="account-container">
+                            <button class="account__btn js-account__btn">Развернуть</button>
+                            <div class="account-container js-account-container">
                                 <div class="account__menu">
                                     <ul class="account-menu__list">
                                         <li class="account-menu__item"><a href="#" class="account-menu__link">Register</a></li>
@@ -145,8 +145,8 @@
         <section class="products-section">
             <aside class="products-aside">
                 <div class="categories">
-                    <div class="categories__title aside-title">categories</div>
-                    <ul class="categories__list">
+                    <div class="categories__title js-categories__title aside-title">categories</div>
+                    <ul class="categories__list js-categories__list">
                         <li class="categories__item">
                             <a href="" class="categories__link">Plants</a>
                             <ul class="aside-subcategiries">
@@ -164,8 +164,8 @@
                     </ul>
                 </div>
                 <div class="filter">
-                    <div class="filter-title aside-title">refine search</div>
-                    <ul class="filter__list">
+                    <div class="filter-title js-filter-title aside-title">refine search</div>
+                    <ul class="filter__list js-filter__list">
                         <li class="filter__item">
                             <div class="filter__title">Color</div>
                             <div class="checkbox-container">
@@ -214,8 +214,8 @@
                     </a>
                 </div>
                 <div class="latest-products">
-                    <div class="latest-products__title aside-title">latest</div>
-                    <ul class="latest-products__list">
+                    <div class="latest-products__title js-latest-products__title aside-title">latest</div>
+                    <ul class="latest-products__list js-latest-products__list">
                         <li class="latest-products__item">
                             <div class="latest-product-card">
                                 <a href="#" class="featured-product-card__link">
@@ -825,7 +825,7 @@
                 <div class="main-footer-top">
                     <div class="main-footer__block contacts">
                         <div class="main-footer__block-title" id="contact">Contact</div>
-                        <ul class="contacts__list">
+                        <ul class="contacts__list js-contacts__list">
                             <li class="contacts__item">Cactuplan - Plant Store & United States</li>
                             <li class="contacts__item">000-000-0000</li>
                             <li class="contacts__item">123456</li>
@@ -834,7 +834,7 @@
                     </div>
                     <div class="main-footer__block footer-info">
                         <div class="main-footer__block-title" id="info">Information</div>
-                        <ul class="footer-info__list">
+                        <ul class="footer-info__list js-footer-info__list">
                             <li class="footer-info__item"><a href="#" class="footer-info__link">About Us</a></li>
                             <li class="footer-info__item"><a href="#" class="footer-info__link">Delivery Information</a></li>
                             <li class="footer-info__item"><a href="#" class="footer-info__link">Privacy Policy</a></li>
@@ -877,7 +877,7 @@
                 </div>
             </div>
         </footer>
-        <a href="#" class="scroll-top"></a>
+        <a href="#" class="scroll-top js-scroll-top"></a>
     </div>
     <script src="./js/hidden-blocks.js"></script>
     <script src="./js/accordion.js"></script>
